# TestCpp

./: CMakeLists.txt  README.md
MSVC/com/: OutofProcess.sln
MSVC/com/DictPrxy/: DictPrxy.vcxproj
chrono/: CMakeLists.txt  chrono_time1.cpp  chrono_time2.cpp  chrono_time3.cpp
com/: CMakeLists.txt
com/comdemo1/: BeginningCom.cpp  BeginningCom.h  CMakeLists.txt  regsvr.reg
com/comdemo2/: BeginningCom.cpp  BeginningCom.def  CMakeLists.txt
com/comtest1/: CMakeLists.txt  main.cpp
com/comtest2/: CMakeLists.txt  main.cpp
com/faststring/: CMakeLists.txt  faststring.cpp  faststring.h  utilsbox.cpp  utilsbox.h
com/test/: CMakeLists.txt
constructor/: CMakeLists.txt  constructor_demo.cpp  constructor_initial_list_no.cpp  constructor_initial_list_yes.cpp
singleton/: CMakeLists.txt  singleton_base.cpp  singleton_base_mutex.cpp  singleton_inherit.cpp  singleton_ref_ret_function.cpp  singleton_ref_ret_function_template.cpp
thread/: CMakeLists.txt  thread_atomic1.cpp  thread_atomic2.cpp  thread_atomic3.cpp  thread_condition1.cpp  thread_condition2.cpp  thread_condition3.cpp  thread_demo.cpp  thread_mutex1.cpp  thread_mutex2.cpp  thread_mutex3.cpp
