add_executable(chrono_example chromo_example.cpp)
add_executable(chrono_compare_clock chrono_compare_clock.cpp)
add_executable(chrono_time1 chrono_time1.cpp)
add_executable(chrono_time2 chrono_time2.cpp)
add_executable(chrono_time3 chrono_time3.cpp)

set_target_properties(chrono_example PROPERTIES FOLDER "chrono")
set_target_properties(chrono_compare_clock PROPERTIES FOLDER "chrono")
set_target_properties(chrono_time1 PROPERTIES FOLDER "chrono")
set_target_properties(chrono_time2 PROPERTIES FOLDER "chrono")
set_target_properties(chrono_time3 PROPERTIES FOLDER "chrono")