add_executable(constructor_initial_list_no constructor_initial_list_no.cpp)
add_executable(constructor_initial_list_yes constructor_initial_list_yes.cpp)
add_executable(constructor_demo constructor_demo.cpp)

set_target_properties(constructor_initial_list_no PROPERTIES FOLDER "constructor")
set_target_properties(constructor_initial_list_yes PROPERTIES FOLDER "constructor")
set_target_properties(constructor_demo PROPERTIES FOLDER "constructor")
